--- a/config/misc/bochsrc.in
+++ b/config/misc/bochsrc.in
@@ -6,3 +6,5 @@ ata0-slave: type=cdrom, path=@GRUB2_ISO@, status=inserted
 com1: enabled=1, mode=file, dev=@SERIAL_FILE@
 
 boot: cdrom
+
+info: action=report
