HUGE steps towards working timers.

--- a/config/misc/bochsrc.in
+++ b/config/misc/bochsrc.in
@@ -7,4 +7,6 @@ com1: enabled=1, mode=file, dev=@SERIAL_FILE@
 
 boot: cdrom
 
-info: action=report
+#debug: action=report
+#info: action=report
+#log: @LOG_FILE@
