finish rd tool, update infrastructure

--- a/tools/apps/Makefile
+++ b/tools/apps/Makefile
@@ -6,6 +6,8 @@ BINDIR			:= $(APPDIR)/bin
 CC				:= gcc
 CFLAGS			:= -g -O0
 
+MAKE			:= $(MAKE) --no-print-directory
+
 RD_SOURCES		:= $(wildcard $(APPDIR)/rd/*.c)
 
 all: $(BINDIR) $(BINDIR)/rd
@@ -13,7 +15,7 @@ all: $(BINDIR) $(BINDIR)/rd
 .PHONY: all
 
 $(BINDIR):
-	-mkdir $(BINDIR)
+	@-mkdir $(BINDIR)
 
 $(BINDIR)/rd: $(RD_SOURCES)
 	$(CC) $(CFLAGS) $^ -o $@
