--- a/config/misc/bochsrc.in
+++ b/config/misc/bochsrc.in
@@ -16,6 +16,8 @@ log: @LOG_FILE@
 #debugger_log: @LOG_FILE@.dbg
 debug_symbols: file=@SYM_FILE@
 
+display_library: term
+
 
 debug: action=ignore, cpu0=ignore, ioapic=report, apic0=report
 info: action=ignore, apic0=report, ioapic=report, cpu0=report
